<resources>
    <string name="msg_server_error_get_tour">Serverfehler! Konnte Tour nicht abrufen</string>
    <string name="msg_tour_not_existing">Tour existiert nicht mehr, da sie gelöscht wurde</string>
    <string name="msg_processing_open_tour">Lade Tour...</string>
    <string name="msg_general_error">Etwas ist schiefgelaufen...</string>
    <string name="msg_logging_in">Anmeldevorgang...</string>
    <string name="msg_user_not_found">Benutzer wurde nicht gefunden</string>
    <string name="msg_server_error">Serverfehler 5XX</string>
    <string name="msg_load_app">Lade Applikation...</string>
    <string name="msg_registering">Registrierungsvorgang...</string>
    <string name="msg_email_not_found">Fehler: Email wurde nicht gefinden</string>
    <string name="msg_no_data_found">Keine Daten gefunden</string>
    <string name="download_ok">Download abgeschlossen</string>
    <string name="download_server_error">Serverfehler 5XX</string>
    <string name="download_already_done">Tour wurde schon geladen</string>
    <string name="download_started">Download gestartet</string>
    <string name="download_no_space">Fehler: Zu wenig Speicherplatz</string>
    <string name="download_notification_title">Lade Tour: </string>
    <string name="app_name">Wanderlust</string>
    <string name="app_domain"> #wanderlustapp</string>
    <string name="msg_manual_header">Bedienungsanleitung</string>
    <string name="msg_manual_p1_header">Meine Position</string>
    <string name="msg_manual_p1_text1">Der «MyLocation-Button» bietet dir zwei Aktionsmöglichkeiten:</string>
    <string name="msg_manual_p1_text2">– Kurzer Klick: Du kannst deine aktuellen Position auf der Karte anzeigen. Achtung: Der Akkuverbrauch ist höher bei angeschaltetem Tracking!</string>
    <string name="msg_manual_p1_text3">– langer Klick: Karte über deiner Position zentrieren</string>
    <string name="msg_manual_p2_header">Foto machen</string>
    <string name="msg_manual_p2_text">Mit diesem Button kannst du Fotos machen und anschliessend auf der Karte ein Eindruck-Icon speichern. Du hast drei Eindruck-Kategorien zur Auswahl:</string>
    <string name="msg_manual_p3_header">Positive Eindrücke</string>
    <string name="msg_manual_p3_text">Hier werden positive Eindrücke abgespeichert. Schöne Berge, grosse Tannen, nette Chalets – was dir gefällt!</string>
    <string name="msg_manual_p4_header">Negative Eindrücke</string>
    <string name="msg_manual_p4_text">Die Stromleitung verläuft direkt über dem Wanderweg oder die Autobahn ist dauernd hörbar? Ein guter Moment für einen negativen Hinweis.</string>
    <string name="msg_manual_p5_header">Warnhinweise</string>
    <string name="msg_manual_p5_text">Ist die Brücke weggebrochen oder ist der Weg viel gefährlicher als erwartet? Dann sollte aus Sicherheitsgründen ein Warnhinweis gemacht werden.</string>
    <string name="disclaimer_copy_wright">©</string>
    <string name="disclaimer_authors">Baris Demirci, Rilind Gashi, Simon Kaspar, Joshua Meier, Tobias Rüegsegger, Fabian Schwander, Hristian Stoilov &amp; Alexander Weinbeck</string>
    <string name="disclaimer_text2">Die Software benötigt für diverse Features Internet. Der Benutzer ist selbst verantwortlich die benötigten Informationen für internetfreie Zonen vorgänging zu beschaffen.</string>
    <string name="disclaimer_text3">Die Autoren oder Copyrightinhaber übernehmen keine Haftung für Schäden, welche durch einen leeren Akku enstehen. Der Benutzer ist selbst verantwortlich die benötigten Informationen zu beschaffen um die Wanderung auch ohne Wanderlust fortzufahen.</string>
    <string name="disclaimer_mit_header">MIT Lizenz</string>
    <string name="disclaimer_mit_text">Die Software wird ohne jede ausdrückliche oder implizierte Garantie bereitgestellt, einschliesslich der Garantie zur Benutzung für den Vorgesehenen oder einem bestimmten Zweck sowie jeglicher Rechtsverletzung, jedoch nicht darauf beschränkt. In keinem Fall sind die Autoren oder Copyrightinhaber für jeglichen Schaden oder sonstige Ansprüche haftbar zu machen, ob infolge der Erfüllung eines Vertrages, eines Deliktes oder anders im Zusammenhang mit der Software oder sonstiger Verwendung der Software entstanden.</string>
    <string name="drawer_open">Menu öffnen</string>
    <string name="drawer_close">Menu schliessen</string>
    <string name="tour_button_show_map">Start</string>
    <string name="tour_equipment">Ausrüstung</string>
    <string name="tour_region">Region</string>
    <string name="tour_difficulty">Schwierigkeit</string>
    <string name="tour_name">Name</string>
    <string name="tour_rating">Bewertung</string>
    <string name="tour_distance">Distanz (km)</string>
    <string name="tour_duration">Dauer (Stunden)</string>
    <string name="tour_filter_noresult">Keine Touren gefunden</string>
    <string name="tour_filter_no_internet">Keine Internetverbindung konnte augebaut werden</string>
    <string name="go_to_shop_string">Zum Onlineshop</string>
    <string name="violation_nudity">Entblössung</string>
    <string name="violation_violence">Gewalt</string>
    <string name="violation_harassment">Erniedrigung</string>
    <string name="violation_suicide">Suizid</string>
    <string name="violation_spam">Spam</string>
    <string name="violation_hatespeech">Rufmord</string>
    <string name="violation_other">Andere</string>
    <string name="report_submit">Vielen Dank für deine Einreichung</string>
    <string name="tour_comment_your_rating">Deine Bewertung</string>
    <string name="tour_comment_average">Durchschnittliche Bewertung</string>
    <string name="tour_comment_no_ratings">Noch keine Bewertungen</string>
    <string name="tour_comment_rating">Bewertung</string>
    <string name="tour_comment_ratings">Bewertungen</string>
    <string name="filter_search">Filter anwenden</string>
    <string name="dialog_feedback_description_edit_hint">Deine Erfahrungen und #Hashtags</string>
    <string-array name="dialog_feedback_spinner_mode">
        <item>öffentlich</item>
        <item>nur für mich</item>
    </string-array>
    <string-array name="dialog_feedback_spinner_type">
        <item>Aussichtspunkt</item>
        <item>Restaurant</item>
        <item>Rastplatz</item>
        <item>Flora / Fauna</item>
    </string-array>
    <string-array name="dialog_difficulties">
        <item>T1</item>
        <item>T2</item>
        <item>T3</item>
        <item>T4</item>
        <item>T5</item>
        <item>T6</item>
    </string-array>
    <string-array name="dialog_feedback_spinner_geoobject_type">
        <item>SAC</item>
    </string-array>
    <string name="msg_picture_not_saved">Foto konnte nicht gespeichert werden</string>
    <string name="msg_no_action_defined">Noch keine Aktion definiert</string>
    <string name="msg_no_internet">Fehler: keine Internetverbindung konnte aufgebaut werden</string>
    <string name="msg_not_saved">nicht gespeichert</string>
    <string name="msg_camera_about_to_start">Kamera wird geöffnet</string>
    <string name="msg_camera_no_gps">GPS deaktiviert! Eindrücke werden nicht gespeichert</string>
    <string name="msg_follow_mode_enabled">Verfolgunsmodus aktiv (erhöhter Batterieverbrauch!)</string>
    <string name="msg_follow_mode_disabled">Verfolgunsmodus deaktiviert\n(Batterie-Sparmodus). Keine Tourerfassung möglich</string>
    <string name="msg_map_centered_on_long_click">Karte wird zentriert</string>
    <string name="action_foreward">weiter</string>
    <string name="menu_map">Karte</string>
    <string name="menu_tours">Touren</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_disclaimer">Über Wanderlust</string>
    <string name="logout">Logout</string>
    <string name="menu_title_other">Anderes</string>
    <string name="action_search">suchen</string>
    <string name="tours">Touren</string>
    <string name="favourites">Favoriten</string>
    <string name="recentTours">Kürzlich</string>
    <string name="saved">Gespeichert</string>
    <string name="pois">POIs</string>
    <string name="registration_name">Benutzernamen</string>
    <string name="registration_email">E-Mail</string>
    <string name="registration_password">Passwort</string>
    <string name="registration_password_repeat">Passwort wiederholen</string>
    <string name="registration_account_exist">Bereits registriert? Login</string>
    <string name="registration_create_account">Account erstellen</string>
    <string name="registration_password_required">Ein Passwort wird benötigt</string>
    <string name="registration_password_no_match">Passwort stimmt nicht überein</string>
    <string name="registration_username_required">Ein Name wird benötigt</string>
    <string name="registration_email_required">E-Mail-Adresse wird benötigt</string>
    <string name="registration_nickname_mail_used">Benutzernamen oder E-Mail-Adresse wird bereits verwendet</string>
    <string name="registration_email_invalid">Ungültige E-Mail-Adresse</string>
    <string name="registration_password_invalid">Minimum 8 Buchstaben und mindestens 1 Nummer</string>
    <string name="registration_connection_error">Verbindung mit Server nicht möglich</string>
    <string name="registration_insert_email_address">E-Mail-Adresse eingeben</string>
    <string name="login_nickname_email">Benutzernamen / E-Mail</string>
    <string name="login_password">Passwort</string>
    <string name="login_login">Login</string>
    <string name="login_failure">Login fehlgeschlagen</string>
    <string name="login_need_registration">Neuen Account erstellen</string>
    <string name="login_forgot_password">Passwort vergessen?</string>
    <string name="login_instagram">Anmelden mit Instagram</string>
    <string name="login_facebook">Anmelden mit Facebook</string>
    <string name="poi_fragment_textview_title">Titel</string>
    <string name="layer_poi">POI-Layer</string>
    <string name="poi_type_restarea">Rast</string>
    <string name="poi_type_restaurant">Restaurant</string>
    <string name="poi_type_view">Aussicht</string>
    <string name="poi_type_nature">Fauna</string>
    <string name="title_poi_type_selection">POI-Layer</string>
    <string name="poi_fragment_success_delete">POI wurde erfolgreich gelöscht</string>
    <string name="poi_fragment_fail_delete">POI löschen fehlgeschlagen</string>
    <string name="poi_successful_saving">POI wurde erfolgreich gespeichert</string>
    <string name="forgot_password_btn">Passwort zurücksetzen</string>
    <string name="forgot_password_reset_mail_success">Eine E-Mail fürs Zurücksetzen des Passwortes wurde erfolgreich versendet</string>
    <string name="forgot_password_reset_mail_fail">Fehler beim zurücksetzen des Passwortes</string>
    <string name="forgot_password_link_login">Zurück zum Login</string>
    <string name="registration_email_confirmation">Eine E-Mail wurde verschickt. Bitte bestätigen vor dem einloggen</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_default">Standard</string>
    <string name="map_type_satelite">Satellit</string>
    <string name="map_type_types">Kartentypen</string>
    <string name="map_layer_layers">Layer</string>
    <string name="map_nothing_found">Kein Resultat gefunden</string>
    <string name="tour_elevation_chart_title">Höhenprofil</string>
    <string name="tour_elevation_chart_range">Höhenmeter</string>
    <string name="tour_elevation_chart_domain">Distanz</string>
    <string name="message_confirm_delete_poi">Willst du den POI wirklich löschen?</string>
    <string name="image_upload_failed">Upload von Bild fehlgeschlagen</string>
    <string name="manual_welcome">Handbuch</string>
    <string name="manual_poi_header">POI (Point of Interest)</string>
    <string name="manual_poi_text">Mit dem POI-Button kannst du eindrückliche Orte fotografieren und den POI entweder nur privat für dich speichern oder ihn mit der Community teilen.</string>
</resources>