<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_tours"
            android:title="@string/menu_tours" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
    </group>


    <item android:title="@string/menu_title_other">
        <menu>
            <!--
        <item
            android:id="@+id/nav_manual"
            android:title="@string/menu_manual" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
            -->
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>




</menu>
