<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_vertical"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:padding="48dp"
        android:showDividers="middle">

        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_disclaimer" />

        <TextView
            style="@style/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_text2" />

        <TextView
            style="@style/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_text3" />

        <TextView
            style="@style/p"
            android:id="@+id/authors_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_authors" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/temp_logo" />

        <TextView
            style="@style/p.Small.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_mit_header" />

        <TextView
            style="@style/p.Small.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_mit_text"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

</ScrollView>