<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/text_container"
                style="@style/transparent_container"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_manual_header" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/h3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image4"
                        android:text="@string/msg_manual_p1_header"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/line_4_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image4"
                        android:text="@string/msg_manual_p1_text1" />

                    <TextView
                        android:id="@+id/line_4_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_4_1"
                        android:text="@string/msg_manual_p1_text2" />

                    <TextView
                        android:id="@+id/line_4_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/line_4_2"
                        android:text="@string/msg_manual_p1_text3" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image5"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/h3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image5"
                        android:text="@string/msg_manual_p2_header"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image5"
                        android:text="@string/msg_manual_p2_text" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/h3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image1"
                        android:text="@string/msg_manual_p3_header"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image1"
                        android:text="@string/msg_manual_p3_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/h3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image2"
                        android:text="@string/msg_manual_p4_header"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image2"
                        android:text="@string/msg_manual_p4_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/h3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image3"
                        android:text="@string/msg_manual_p5_header"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image3"
                        android:text="@string/msg_manual_p5_text" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/go_to_manual_button"
                style="@style/my_click_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/action_foreward" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
