<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_two_and_inactive"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/manual_container_poi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            style="@style/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingTop="12dp"
            android:text="@string/manual_welcome"
            android:textAlignment="center" />

        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_poi_header" />

        <TextView
            style="@style/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_poi_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/temp_poi" />
    </LinearLayout>

</RelativeLayout>
